--- a/style 2.css
+++ b/style 2.css
@@ -3,6 +3,7 @@
 /* default to border-box */
 html {
     background-color: #ffaacc;
+    border: 10px solid #facaf1;
     box-sizing: border-box;
     font-size: 16px;
   }
